--- a/shop-baskets.html
+++ b/shop-baskets.html
@@ -186,15 +186,184 @@
                         </div>
                     </div>
                 </div>
+                <!-- карточка товара -->   
+                <div class="shop-block__item flex-baskets">
+                    <div class="card">
+                        <div class="card__body">
+                            <div class="card__title">Корзина к-5/ж</div>
+                            <div class="card__img  card__img_height-baskets">
+                                <picture>
+                                    <source srcset="img/__shop-baskets/5.webp" type="image/webp">
+                                    <img src="img/__shop-baskets/5.jpg" alt="гроб">
+                                </picture>
+                            </div>
+                            <div class="card__prais">40 BYN</div>
+                            <a class="card__button" href="contacts.html">купить</a>
+                        </div>
+                    </div>
+                </div>
+                <!-- карточка товара -->   
+                <div class="shop-block__item flex-baskets">
+                    <div class="card">
+                        <div class="card__body">
+                            <div class="card__title">Корзина к-5/к</div>
+                            <div class="card__img  card__img_height-baskets">
+                                <picture>
+                                    <source srcset="img/__shop-baskets/6.webp" type="image/webp">
+                                    <img src="img/__shop-baskets/6.jpg" alt="гроб">
+                                </picture>
+                            </div>
+                            <div class="card__prais">40 BYN</div>
+                            <a class="card__button" href="contacts.html">купить</a>
+                        </div>
+                    </div>
+                </div>
+                <!-- карточка товара -->   
+                <div class="shop-block__item flex-baskets">
+                    <div class="card">
+                        <div class="card__body">
+                            <div class="card__title">Корзина к-4/k</div>
+                            <div class="card__img  card__img_height-baskets">
+                                <picture>
+                                    <source srcset="img/__shop-baskets/7.webp" type="image/webp">
+                                    <img src="img/__shop-baskets/7.jpg" alt="гроб">
+                                </picture>
+                            </div>
+                            <div class="card__prais">35 BYN</div>
+                            <a class="card__button" href="contacts.html">купить</a>
+                        </div>
+                    </div>
+                </div>
+                <!-- карточка товара -->   
+                <div class="shop-block__item flex-baskets">
+                    <div class="card">
+                        <div class="card__body">
+                            <div class="card__title">Корзина к-4/б</div>
+                            <div class="card__img  card__img_height-baskets">
+                                <picture>
+                                    <source srcset="img/__shop-baskets/8.webp" type="image/webp">
+                                    <img src="img/__shop-baskets/8.jpg" alt="гроб">
+                                </picture>
+                            </div>
+                            <div class="card__prais">35 BYN</div>
+                            <a class="card__button" href="contacts.html">купить</a>
+                        </div>
+                    </div>
+                </div>
+                <!-- карточка товара -->   
+                <div class="shop-block__item flex-baskets">
+                    <div class="card">
+                        <div class="card__body">
+                            <div class="card__title">Корзина к-4/c</div>
+                            <div class="card__img  card__img_height-baskets">
+                                <picture>
+                                    <source srcset="img/__shop-baskets/9.webp" type="image/webp">
+                                    <img src="img/__shop-baskets/9.jpg" alt="гроб">
+                                </picture>
+                            </div>
+                            <div class="card__prais">35 BYN</div>
+                            <a class="card__button" href="contacts.html">купить</a>
+                        </div>
+                    </div>
+                </div>
+                <!-- карточка товара -->   
+                <div class="shop-block__item flex-baskets">
+                    <div class="card">
+                        <div class="card__body">
+                            <div class="card__title">Корзина к-3/p</div>
+                            <div class="card__img  card__img_height-baskets">
+                                <picture>
+                                    <source srcset="img/__shop-baskets/10.webp" type="image/webp">
+                                    <img src="img/__shop-baskets/10.jpg" alt="гроб">
+                                </picture>
+                            </div>
+                            <div class="card__prais">31 BYN</div>
+                            <a class="card__button" href="contacts.html">купить</a>
+                        </div>
+                    </div>
+                </div>
+                <!-- карточка товара -->   
+                <div class="shop-block__item flex-baskets">
+                    <div class="card">
+                        <div class="card__body">
+                            <div class="card__title">Корзина к-3/c</div>
+                            <div class="card__img  card__img_height-baskets">
+                                <picture>
+                                    <source srcset="img/__shop-baskets/11.webp" type="image/webp">
+                                    <img src="img/__shop-baskets/11.jpg" alt="гроб">
+                                </picture>
+                            </div>
+                            <div class="card__prais">31 BYN</div>
+                            <a class="card__button" href="contacts.html">купить</a>
+                        </div>
+                    </div>
+                </div>
+                <!-- карточка товара -->   
+                <div class="shop-block__item flex-baskets">
+                    <div class="card">
+                        <div class="card__body">
+                            <div class="card__title">Корзина к-3/k</div>
+                            <div class="card__img  card__img_height-baskets">
+                                <picture>
+                                    <source srcset="img/__shop-baskets/12.webp" type="image/webp">
+                                    <img src="img/__shop-baskets/12.jpg" alt="гроб">
+                                </picture>
+                            </div>
+                            <div class="card__prais">31 BYN</div>
+                            <a class="card__button" href="contacts.html">купить</a>
+                        </div>
+                    </div>
+                </div>
             </div>
 
+            <!-- текст: -->
+            <div class="text-page container">
+                <div class="text-page_margin">Похороны — тяжелый этап, пережить который хочется по всем канонам и правилам. Довольно сложно в состоянии скорби учесть все детали, предусмотреть все. Необходимо выполнить множество задач, чтобы достойно проводить усопшего. Подготовка к погребению отнимает много времени, сил, но мы стараемся всячески помогать в этом непростом вопросе. Наше агентство выполняет полный спектр ритуальных услуг, в том числе и занимается продажей ритуальных корзинок из искусственных цветов. Это обязательный и важный атрибут похорон. Каждый человек, желающий почтить память умершего, приносит искусственные или живые цветы. Это символ памяти, скорби, дань уважения. Если еще несколько лет назад ритуальные корзинки с цветами были редкостью, то сегодня купить их можно без труда и в любом исполнении. Они представлены разных размеров, дизайна, цветовой гаммы. Выбор ограничивается лишь финансовыми возможностями и предпочтениями покупателя.</div>
+            </div>
 
+            <!-- title: -->
+            <div class="text-title container">
+                <div class="text-title_margin">Преимущества ритуальных корзин:</div>
+            </div>
 
+            <!-- UL-LI: -->
+            <div class="text-page container">
+                <div class="text-page_margin">
+                    <ul class="text__list">
+                        <li class="text__line">Долговечность. Изготавливают их из проволочной корзины, которая имитирует лапник еловый. Также для лукошка может использоваться ивовая лоза. Выбор этих материалов не случаен — они символизируют непрерывность жизни, тонкую грань между мирами.</li>
+                        <li class="text__line">Привлекательный вид. Наполнение корзины может быть разным. Это могут быть розы, лилии, каллы, хризантемы. Искусственные цветы способны простоять довольно длительный период, несмотря на погодные условия, без потери первозданного вида.</li>
+                        <li class="text__line">Доступная цена. Стоимость на ритуальные корзины невысокая. У нас эти изделия можно купить по очень демократичным ценам, а ассортимент порадует даже самых требовательных покупателей.</li>           
+                    </ul>
+                </div>
+            </div>
+
+            <!-- текст: -->
+            <div class="text-page container">
+                <div class="text-page_margin">Подбирается ритуальная корзина не только с учетом пожеланий, но и в зависимости от пола, характера усопшего. Например, для мужчины лучше всего подойдут вариант сине-белых роз или лилий, а для женщин — красные или розовые цвета. Конечно, строгих ограничений при выборе ритуальной корзинки нет, но это стандартные рекомендации.</div>
+            </div>
+
+            <!-- title: -->
+            <div class="text-title container">
+                <div class="text-title_margin">Где купить ритуальную корзину в Минске по доступной цене?</div>
+            </div>
+
+            <!-- текст: -->
+            <div class="text-page container">
+                <div class="text-page_margin">У нас всегда в наличии есть большой выбор атрибутов для захоронения. Кроме того, мы оказываем полный спектр услуг, в том числе и консультационную помощь в выборе всех аксессуаров. Ритуальные корзины с искусственными цветами изготовлены опытными флористами с учетом всех требований и особенностей ритуала. Размеры их могут совершенно разными, как и исполнение. Цена на ритуальную корзину зависит от количества искусственных цветов, оформления. Например, можно ее дополнительно украсить ленточкой, добавить элементов и т.п. Никаких ограничений, кроме вашей фантазии у нас нет. И главное — мы стараемся делать все, чтобы похороны проходили с минимальными финансовыми затратами. Для нас важно не продать, а сделать так, чтобы прощание с вашим близким человеком прошло на высочайшем уровне.</div>
+            </div>
+
+            <!-- title: -->
+            <div class="text-title container">
+                <div class="text-title_margin">Как сделать заказ ритуальной корзины?</div>
+            </div>
+
+            <!-- текст: -->
+            <div class="text-page container">
+                <div class="text-page_margin">Вы можете выбрать понравившееся изделие в онлайн-каталоге и позвонить нам. После уточнения всех нюансов изделие будет дожидаться вас или будет доставлено в ближайшее время по указанному адресу.</div>
+            </div>
+            
 
 <!-- конец блок магазина -->
-    
-
-
         </div>
 
         </main>
