--- a/shop-crosses.html
+++ b/shop-crosses.html
@@ -115,7 +115,115 @@
                 </div>
             </div>
 
+            <!-- блок с товарами -->
+            <div class="shop-block"> 
+                <!-- карточка товара -->   
+                <div class="shop-block__item  flex-crosses">
+                    <div class="card">
+                        <div class="card__body">
+                            <div class="card__title">Крест католический с молдингом</div>
+                            <div class="card__img  card__img_height-crosses">
+                                <picture>
+                                    <source srcset="img/__shop-crosses/1.webp" type="image/webp">
+                                    <img src="img/__shop-crosses/1.jpg" alt="крест ритуальный">
+                                </picture>
+                            </div>
+                            <div class="card__prais">37 BYN</div>
+                            <a class="card__button" href="contacts.html">купить</a>
+                        </div>
+                    </div>
+                </div>
+                <!-- карточка товара -->   
+                <div class="shop-block__item  flex-crosses">
+                    <div class="card">
+                        <div class="card__body">
+                            <div class="card__title">Крест православный с молдингом</div>
+                            <div class="card__img  card__img_height-crosses">
+                                <picture>
+                                    <source srcset="img/__shop-crosses/2.webp" type="image/webp">
+                                    <img src="img/__shop-crosses/2.jpg" alt="крест ритуальный">
+                                </picture>
+                            </div>
+                            <div class="card__prais">37 BYN</div>
+                            <a class="card__button" href="contacts.html">купить</a>
+                        </div>
+                    </div>
+                </div>
+                <!-- карточка товара -->   
+                <div class="shop-block__item  flex-crosses">
+                    <div class="card">
+                        <div class="card__body">
+                            <div class="card__title">Крест католический стандарт</div>
+                            <div class="card__img  card__img_height-crosses">
+                                <picture>
+                                    <source srcset="img/__shop-crosses/3.webp" type="image/webp">
+                                    <img src="img/__shop-crosses/3.jpg" alt="крест ритуальный">
+                                </picture>
+                            </div>
+                            <div class="card__prais">35 BYN</div>
+                            <a class="card__button" href="contacts.html">купить</a>
+                        </div>
+                    </div>
+                </div>
+                <!-- карточка товара -->   
+                <div class="shop-block__item  flex-crosses">
+                    <div class="card">
+                        <div class="card__body">
+                            <div class="card__title">Крест правосл с гравировкой</div>
+                            <div class="card__img  card__img_height-crosses">
+                                <picture>
+                                    <source srcset="img/__shop-crosses/4.webp" type="image/webp">
+                                    <img src="img/__shop-crosses/4.jpg" alt="крест ритуальный">
+                                </picture>
+                            </div>
+                            <div class="card__prais">35 BYN</div>
+                            <a class="card__button" href="contacts.html">купить</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
+            <!-- текст: -->
+            <div class="text-page container">
+                <div class="text-page_margin">Устанавливают кресты на могилу уже много десятков лет. Изначально задача этого ритуала была защитить усопшего от злых духов. Сегодня — это не только защита, но и демонстрация того, что в этом месте покоится христианин. Также крест является символом вечной жизни, воскресения, поэтому без него не обходятся ни одни похороны. На рынке представлено большое количество разных крестов на могилу: кованные, деревянные и т.п. Все они изготавливаются по православным и католическим обычаям. Крест сложен из частей, которые располагаются друг против друга.</div>
+            </div>
+
+            <!-- title: -->
+            <div class="text-title container">
+                <div class="text-title_margin">Как выбрать крест для похорон ?</div>
+            </div>
+
+            <!-- текст: -->
+            <div class="text-page container">
+                <div class="text-page_margin">Чаще всего отдают предпочтение деревянным крестами. Считается, что именно дерево защищает усопшего от всех невзгод. При этом важно, чтобы крест изготовлен был из качественного материала – дуба, сосны, клена. Устанавливают его под открытым небом, поэтому важно, чтобы он не боялся осадков, палящего солнца и других погодных условия. Оформление крестов для похорон из дерева может быть разным:</div>
+            </div>
+
+            <!-- UL-LI: -->
+            <div class="text-page container">
+                <div class="text-page_margin">
+                    <ul class="text__list">
+                        <li class="text__line">С орнаментами;</li>
+                        <li class="text__line">Иконами;</li>
+                        <li class="text__line">Фигурами Спасителя;</li>
+                        <li class="text__line">Надписями.</li>            
+                    </ul>
+                </div>
+            </div>
+
+            <!-- текст: -->
+            <div class="text-page container">
+                <div class="text-page_margin">Выбор ограничен лишь бюджетом и пожеланиями родных. Еще один важный момент — выбор креста для похорон в зависимости от вероисповедания усопшего. Это может быть православный или католический крест.</div>
+            </div>          
+
+            <!-- title: -->
+            <div class="text-title container">
+                <div class="text-title_margin">Где купить в Минске погребальный крест ?</div>
+            </div>
+
+            <!-- текст: -->
+            <div class="text-page container">
+                <div class="text-page_margin">В нашем каталоге представлены разные варианты крестов для погребения. Они могут быть с молдингом, гравировкой. Цена на все изделия доступная. Качество и натуральность материала гарантировано. Оформление заказа осуществляется круглосуточно. Сделать это можно по телефону или оставив заявку на сайте. Предусмотрены скидки при заключении договора на оказание ритуальных услуг, приобретении принадлежностей для погребения. Мы понимаем ваше горе и стараемся максимально упростить прощание с близким человеком. У нас вы можете, как приобрести отдельные атрибуты, так и заказать услугу под ключ. Связаться с нами можно прямо сейчас для получения бесплатной консультации.</div>
+            </div>
 
 
 <!-- конец блок магазина -->
